--- a/app/src/html/view-donors.html
+++ b/app/src/html/view-donors.html
@@ -26,6 +26,13 @@
                     <div class="col-12">
                         <nav>
                             <a href="index.html"><img class="nav-logo"  src="../images/organ-donation-platform-logo-1.svg" alt="Organ Donation Platform"></a>
+                            <ul>
+                                <li>
+                                    <button class="btn btn-sm btn-primary homepage">
+                                        <a class="hover" href="index.html">Back</a>
+                                    </button>
+                                </li>
+                            </ul>
                         </nav>
                     </div>
                 </div>
