--- a/app/src/html/awareness.html
+++ b/app/src/html/awareness.html
@@ -27,10 +27,10 @@
                     <a href="homepage.html"><img id="logo" src="../images/organ-donation-platform-logo-1.svg" alt="Organ Donation Platform"></a>
                     <ul>
                         <li><a href="homepage.html">Home</a></li>
-                        <li><a href="about-us.html">About Us</a></li>
+                        <!-- <li><a href="about-us.html">About Us</a></li> -->
                         <li><a href="contact.html">Contact</a></li>
                         <li><a class="active" href="">Awareness</a></li>
-                        <li><a href="donor-pledge.html">Pledge</a></li>
+                        <li><a href="../index.html">Register</a></li>
                     </ul>
                 </nav>
               
@@ -208,17 +208,17 @@
 
 
     <footer>
-        <div class="container">
+        <div class="container pb-4">
             <div class="row center-box">
                 <div class="col-4">
                     <div class="footer-logo"><img src="../images/organ-donation-platform-logo-white.svg" alt=""></div>
                 </div>    
         
-                <div class="col-12">
+                <!-- <div class="col-12">
                     <div id="copyright">
                         <p>Copyright © 2022 Organ Donation Platform - All rights reserved</p>
                     </div>
-                </div>
+                </div> -->
             </div> <!-- end of row -->
         </div> <!-- end of conatiner -->        
     </footer>
