--- a/app/src/html/homepage.html
+++ b/app/src/html/homepage.html
@@ -27,10 +27,10 @@
                     <a href="homepage.html"><img id="logo" src="../images/organ-donation-platform-logo-1.svg" alt="Organ Donation Platform"></a>
                     <ul>
                         <li><a class="active" href="">Home</a></li>
-                        <li><a href="about-us.html">About Us</a></li>
+                        <!-- <li><a href="about-us.html">About Us</a></li> -->
                         <li><a href="contact.html">Contact</a></li>
                         <li><a href="awareness.html">Awareness</a></li>
-                        <li><a href="donor-pledge.html">Pledge</a></li>
+                        <li><a href="../index.html">Register</a></li>
                     </ul>
                 </nav>
               
@@ -45,9 +45,9 @@
                 <div class="col-md-7 banner">
                     <h1>Pledge To Become <br>A Donor</h1>
                     <h3>More than 100,000 people are waiting for a lifesaving transplant. You can help.</h3>
-                    <button class="btn btn-lg btn-success">
+                    <!-- <button class="btn btn-lg btn-success">
                         <a class="hover" href="donor-pledge.html">Pledge To Become A Donor</a>
-                    </button>
+                    </button> -->
                 </div>
 
                 <div class="col-md-4">
@@ -144,17 +144,17 @@
 
 
     <footer>
-        <div class="container">
+        <div class="container pb-4">
             <div class="row center-box">
                 <div class="col-4">
                     <div class="footer-logo"><img src="../images/organ-donation-platform-logo-white.svg" alt=""></div>
                 </div>    
         
-                <div class="col-12">
+                <!-- <div class="col-12">
                     <div id="copyright">
                         <p>Copyright © 2022 Organ Donation Platform - All rights reserved</p>
                     </div>
-                </div>
+                </div> -->
             </div> <!-- end of row -->
         </div> <!-- end of conatiner -->        
     </footer>
