--- a/app/src/index.html
+++ b/app/src/index.html
@@ -28,7 +28,7 @@
                             <ul>
                                 <li>
                                     <button class="btn btn-sm btn-primary homepage">
-                                        <a class="hover" href="homepage.html">Homepage</a>
+                                        <a class="hover" href="homepage.html">Home</a>
                                     </button>
                                 </li>
                             </ul>
@@ -53,9 +53,9 @@
                                     <button class="btn btn-lg btn-primary custom">View Donors</button>
                                 </a>                                
                         <br>
-                                <a href="verify-pledges.html">
+                                <!-- <a href="verify-pledges.html">
                                     <button class="btn btn-lg btn-primary custom">Verify Pledges</button>
-                                </a>
+                                </a> -->
                             </div>
                         </div>     
                         
@@ -70,18 +70,18 @@
                                         <button class="btn btn-lg btn-primary custom">View Patients</button>
                                     </a>                                
                             <br>
-                                    <a href="view-pledges.html">
+                                    <!-- <a href="view-pledges.html">
                                         <button class="btn btn-lg btn-primary custom">View Pledges</button>
-                                    </a>
+                                    </a> -->
                             </div>
                         </div>                    
-                    </div> <!-- end of button -->  <br>    
+                    </div> <!-- end of button -->   
 
                     <div class="container">
                         <div class="row center-box">
                             <div class="col-md-4">
                                 <div class="transplant-btn" id="size">
-                                        <a href="transplant-matching.html"">
+                                        <a href="transplant-matching.html">
                                             <button class="btn btn-lg btn-primary custom custom-tm">Transplant Match</button>
                                         </a>
                                 </div>
