--- a/app/src/html/register.html
+++ b/app/src/html/register.html
@@ -28,7 +28,7 @@
                             <ul>
                                 <li>
                                     <button class="btn btn-sm btn-primary homepage">
-                                        <a class="hover" href="homepage.html">Home</a>
+                                        <a class="hover" href="index.html">Home</a>
                                     </button>
                                 </li>
                             </ul>
@@ -134,5 +134,6 @@
                 <footer>
 
                 </footer>
+                
     </body>
 </html>
