--- a/app/src/html/transplant-matching.html
+++ b/app/src/html/transplant-matching.html
@@ -30,7 +30,7 @@
                                 <ul>
                                     <li>
                                         <button class="btn btn-sm btn-primary homepage">
-                                            <a class="hover" href="index.html">Back</a>
+                                            <a class="hover" href="register.html">Back</a>
                                         </button>
                                     </li>
                                 </ul>
