--- a/app/src/html/view-patients.html
+++ b/app/src/html/view-patients.html
@@ -28,7 +28,7 @@
                             <ul>
                                 <li>
                                     <button class="btn btn-sm btn-primary homepage">
-                                        <a class="hover" href="register.html">Back</a>
+                                        <a class="hover" href="patientregister.html">Back</a>
                                     </button>
                                 </li>
                             </ul>
